# Privo

./: .gitignore  README.md  THIRD-PARTY-NOTICE.md  [DEL]Notes.txt  config.yaml  pyproject.toml  requirements.txt
src/app/: mainLater.py
src/audio/: audioInput.py
src/privo/: cli.py  config.yaml
src/privo/app/: __init__.py  benchmark.py  chat.py  config_loader.py  debugger.py  installer.py  module_builder.py  runner.py  wakewordMain.py
src/privo/audio/: __init__.py  audioInput.py  audio_input.py
src/privo/llm/: __init__.py  llm.py
src/privo/stt/: __init__.py  stt.py  utterance.py
src/privo/tts/: __init__.py  tts.py
src/privo/wakeword/: __init__.py  wakewordDetector.py  wakeword_detector.py
