[project]
name = "privo"
version = "0.1"
description = "A private and fully offline Voice Assistant"
authors = [
    {name = "Moritz Rühm", email = "moritz.ruehm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice (>=0.5.5,<0.6.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "openwakeword (>=0.6.0,<0.7.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "rich (>=14.3.3,<15.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
privo = "privo.cli:main"